--- a/Multy/Storyboards/uk.lproj/Main.strings
+++ b/Multy/Storyboards/uk.lproj/Main.strings
@@ -102,7 +102,7 @@
 "XXC-0f-DEu.text" = "BTC";
 
 /* Class = "UITabBarItem"; title = "Settings"; ObjectID = "Z17-jd-0eD"; */
-"Z17-jd-0eD.title" = "Установки";
+"Z17-jd-0eD.title" = "Налаштування";
 
 /* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "ZPG-iV-jLD"; */
 "ZPG-iV-jLD.normalTitle" = "Скасувати";
