--- a/Multy/Strings/en.lproj/Contacts.strings
+++ b/Multy/Strings/en.lproj/Contacts.strings
@@ -13,3 +13,4 @@
 "DELETE FROM CONTACTS" = "Delete from Contact";
 "ADDRESS SAVED" = "The address is already saved in Contacts";
 "ADDRESS NOT MATCH" = "The address does not match the selected blockchain";
+"COPY TO CLIPBOARD" = "Copy to clipboard";
