--- a/Multy/Strings/ru.lproj/Contacts.strings
+++ b/Multy/Strings/ru.lproj/Contacts.strings
@@ -13,3 +13,4 @@
 "DELETE FROM CONTACTS" = "Удалить из контакта";
 "ADDRESS SAVED" = "Адрес уже сохранен в контактах";
 "ADDRESS NOT MATCH" = "Адрес не подходит для выбранного блокчейна";
+"COPY TO CLIPBOARD" = "Скопировать в буфер обмена";
