--- a/Multy/Strings/uk.lproj/Contacts.strings
+++ b/Multy/Strings/uk.lproj/Contacts.strings
@@ -13,3 +13,4 @@
 "DELETE FROM CONTACTS" = "Видалити из контакта";
 "ADDRESS SAVED" = "Адреса вже збережений в контактах";
 "ADDRESS NOT MATCH" = "Адресу не підходить для обраного блокчейна";
+"COPY TO CLIPBOARD" = "Скопіювати в буфер обміну";
