--- a/Multy/Strings/ru.lproj/Assets.strings
+++ b/Multy/Strings/ru.lproj/Assets.strings
@@ -30,3 +30,4 @@
 "AGREE WITH TERMS" = "Я согласен с Условиями предоставления услуг и обработкой своих персональных данных в соответствии с Политикой конфиденциальности Multy.";
 "ERROR WHILE CREATING WALLET" = "Ошибка при создании кошелька!";
 "WALLET NAME NOT EMPTY ALERT" = "Имя кошелька не должно быть пустым";
+"CREATE OR IMPORT WALLET" = "Нажмите кнопку, чтобы создать новый кошелек или импортировать существующий.";
