--- a/Multy/Strings/uk.lproj/Assets.strings
+++ b/Multy/Strings/uk.lproj/Assets.strings
@@ -30,3 +30,4 @@
 "AGREE WITH TERMS" = "Я погоджуюся з Умовами надання послуг та обробкою своїх персональних даних відповідно до Політики конфідеційності Multy.";
 "ERROR WHILE CREATING WALLET" = "Помилка при створенні гаманця!";
 "WALLET NAME NOT EMPTY ALERT" = "Ім'я гаманця не повинно бути порожнім";
+"CREATE OR IMPORT WALLET" = "Натисніть кнопку, щоб створити новий або імпортувати існуючий гаманець.";
